<resources>
    <string name="app_name">E2EE</string>
    <string name="nav_header_title">E2EE</string>
    <string name="nav_header_desc">E2EE</string>
    <string name="action_settings">Settings</string>
    <string name="action_afficher">Show</string>
    <string name="menu_home">Home</string>
    <string name="menu_identity">Identity</string>
    <string name="menu_directory">Directory</string>
    <string name="menu_about">About</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="pubKey">Public Key</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="share">Share</string>
    <string name="id_share">Share</string>
    <string name="id_copy">Copy</string>
    <string name="reset">Reset</string>
    <string name="err_unex">Unexpected error!</string>
    <string name="m1_generate">Generate Message 1</string>
    <string name="m1_validate">Validate Message 1</string>
    <string name="m1_textbehind">Other Message 1</string>
    <string name="m1_generated">Message 1 generated!</string>
    <string name="m2_generate">Generate Message 2</string>
    <string name="m2_validate">Validate Message 2</string>
    <string name="m2_textbehind">Other Message 2</string>
    <string name="m2_generated">Message 2 generated!</string>
    <string name="auth_title">Authenticate</string>
    <string name="auth_desc">E2EE for signing a message</string>
    <string name="auth_canceled">Authentication canceled!</string>
    <string name="auth_error">Authentication error!</string>
    <string name="conv_created">Conversation created!</string>
    <string name="err_msg">Error! </string>
    <string name="err_ex_size">"The other Message 1 is not the expected size!"</string>
    <string name="err_unk_send">"Unknown sender!"</string>
    <string name="conv_deleted">Conversation deleted!</string>
    <string name="empty_conv">No conversations! Please create a new conversation</string>
    <string name="conv_empty_message">Empty message!</string>
    <string name="message">Message</string>
    <string name="err_msg_wrong">Error on decipher!</string>
    <string name="id_replace">Replace</string>
    <string name="id_replaced">Replaced identity!</string>
    <string name="id_pubkey">Show Public Key</string>
    <string name="qrc_pubkey">QR Code Public Key</string>
    <string name="err_qrc">Error during generating QR Code</string>
    <string name="qrc_m1">QR Code Message 1</string>
    <string name="qrc_m2">QR Code Message 2</string>
    <string name="err_empty_name">Empty username</string>
    <string name="err_empty_pubkey">Empty Public Key</string>
    <string name="cont_add">Add contact</string>
    <string name="err_wrong_pubkey">Wrong Public Key!</string>
    <string name="err_already_name">Name already exists!</string>
    <string name="cont_info">Contact information</string>
    <string name="delete">Delete</string>
    <string name="popup_info">Information</string>
    <string name="deleted">Deleted</string>
    <string name="cont_added">User added</string>
    <string name="ab_title">APPLICATION E2EE</string>
    <string name="ab_home">Home: Create a conversation and converse</string>
    <string name="ab_directory">Directory: Add and remove users</string>
    <string name="ab_id">Identity: Your identity + Replace</string>
    <string name="ab_conv">Conversation: Cipher and decipher messages</string>
    <string name="ab_created">Created by Frédéric and Mialy</string>
</resources>